# examples

./: BUILD  WORKSPACE
helloworld/greeter_client/: BUILD.bazel  main.go
helloworld/greeter_server/: BUILD.bazel  main.go
helloworld/helloworld/: helloworld.pb.go  helloworld.proto
